# mcp-relay

./: .gitignore  README.md  mcp-relay  mcp-sync  pyproject.toml
tests/: test_mcp_relay.py  test_mcp_sync.py
