[project]
name = "mcp-relay"
version = "0.1.0"
description = "Single source of truth for MCP server configs across AI editors"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sudhanshu Raheja", email = "s7dhansh@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "ai", "editors", "config", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
requires-python = ">=3.10"

[project.scripts]
mcp-relay = "mcp_relay:main"

[project.urls]
Homepage = "https://github.com/s7dhansh/mcp-relay"
Repository = "https://github.com/s7dhansh/mcp-relay"
Issues = "https://github.com/s7dhansh/mcp-relay/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools]
py-modules = ["mcp_relay"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]
